[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fixedincomelib"
version = "0.1.0"
description = "Fixed income modeling: yield curves, SABR, and valuation engines"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "NYU-QuantLab contributors" }]
keywords = ["fixed income", "yield curve", "SABR", "quant finance"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Office/Business :: Financial",
]
dependencies = [
  "numpy==2.3.4",
  "pandas==2.3.3",
  "scipy==1.16.2",
  "QuantLib==1.40",
  "pysabr==0.4.1",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.3",
  "pytest-cov==5.0.0",
  "ruff==0.6.8",
  "black==24.8.0",
  "mypy==1.11.2",
  "build==1.2.2.post1",
  "twine==5.1.1",
  "jupyter==1.1.1",
  "ipykernel==6.29.5",
]

[project.urls]
Homepage = "https://github.com/NYU-QuantLab/FixedIncomeLib"
Source = "https://github.com/NYU-QuantLab/FixedIncomeLib"
Issues = "https://github.com/NYU-QuantLab/FixedIncomeLib/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["fixedincomelib", "fixedincomelib.*"]
exclude = ["tests*", "demo*", "notebooks*", "notes*", "docs*"]

[tool.setuptools.package-data]
"fixedincomelib" = ["**/*.json", "**/*.csv","py.typed"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "UP", "B"]
ignore = ["E203"]

[tool.mypy]
python_version = "3.11"
mypy_path = "."
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
strict_optional = true
